# cd-mini-project

./: main.py  parser.py  pyproject.toml  requirements.txt  tutle_grammer.txt  utils.py
input/: 1.txt  2.txt  3.txt
